force-app/main/default/objects/Contatct__c/Contatct__c.object-meta.xml
<CustomObject>
    <label>Contatct</label>
    <nameField>
        <label>Contatct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>