force-app/main/default/objects/Contatct__c/fields/Merged_Name__c.field-meta.xml
<CustomField>
    <fullName>Merged_Name__c</fullName>
    <formula>IF(
NOT(ISBLANK(TEXT( Salutation__c ))), FirstName__c  &amp;  Last_Name__c  &amp; TEXT( Salutation__c ), FirstName__c  &amp;  Last_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merged Name</label>
    <type>Text</type>
</CustomField>